src/XPlaneSDK/CHeaders/XPLM/XPLMDisplay.h


typedef enum {
  xplm_device_GNS430_1 = 0,
  xplm_device_GNS430_2 = 1,
  xplm_device_GNS530_1 = 2,
  xplm_device_GNS530_2 = 3,
  xplm_device_CDU739_1 = 4,
  xplm_device_CDU739_2 = 5,
  xplm_device_G1000_PFD_1 = 6,
  xplm_device_G1000_MFD = 7,
  xplm_device_G1000_PFD_2 = 8,
  xplm_device_CDU815_1 = 9,
  xplm_device_CDU815_2 = 10,
  xplm_device_Primus_PFD_1 = 11,
  xplm_device_Primus_PFD_2 = 12,
  xplm_device_Primus_MFD_1 = 13,
  xplm_device_Primus_MFD_2 = 14,
  xplm_device_Primus_MFD_3 = 15,
  xplm_device_Primus_RMU_1 = 16,
  xplm_device_Primus_RMU_2 = 17,
} XPLMDeviceID;
typedef int (* XPLMAvionicsCallback_f)(
                         XPLMDeviceID         inDeviceID,
                         int                  inIsBefore,
                         void *               inRefcon);
typedef void * XPLMAvionicsID;
typedef struct {
     int                       structSize;
     XPLMDeviceID              deviceId;
     XPLMAvionicsCallback_f    drawCallbackBefore;
     XPLMAvionicsCallback_f    drawCallbackAfter;
     void *                    refcon;
} XPLMCustomizeAvionics_t;
XPLM_API XPLMAvionicsID XPLMRegisterAvionicsCallbacksEx(
                         XPLMCustomizeAvionics_t * inParams);
XPLM_API void       XPLMUnregisterAvionicsCallbacks(
                         XPLMAvionicsID       inAvionicsId);
typedef void * XPLMWindowID;
typedef void (* XPLMDrawWindow_f)(
                         XPLMWindowID         inWindowID,
                         void *               inRefcon);
typedef void (* XPLMHandleKey_f)(
                         XPLMWindowID         inWindowID,
                         char                 inKey,
                         XPLMKeyFlags         inFlags,
                         char                 inVirtualKey,
                         void *               inRefcon,
                         int                  losingFocus);
typedef enum {
  xplm_MouseDown = 1,
  xplm_MouseDrag = 2,
  xplm_MouseUp = 3,
} XPLMMouseStatus;
typedef int (* XPLMHandleMouseClick_f)(
                         XPLMWindowID         inWindowID,
                         int                  x,
                         int                  y,
                         XPLMMouseStatus      inMouse,
                         void *               inRefcon);
typedef enum {
  xplm_CursorDefault = 0,
  xplm_CursorHidden = 1,
  xplm_CursorArrow = 2,
  xplm_CursorCustom = 3,
} XPLMCursorStatus;
typedef XPLMCursorStatus (* XPLMHandleCursor_f)(
                         XPLMWindowID         inWindowID,
                         int                  x,
                         int                  y,
                         void *               inRefcon);
typedef int (* XPLMHandleMouseWheel_f)(
                         XPLMWindowID         inWindowID,
                         int                  x,
                         int                  y,
                         int                  wheel,
                         int                  clicks,
                         void *               inRefcon);
typedef enum {
  xplm_WindowLayerFlightOverlay = 0,
  xplm_WindowLayerFloatingWindows = 1,
  xplm_WindowLayerModal = 2,
  xplm_WindowLayerGrowlNotifications = 3,
} XPLMWindowLayer;
typedef enum {
  xplm_WindowDecorationNone = 0,
  xplm_WindowDecorationRoundRectangle = 1,
  xplm_WindowDecorationSelfDecorated = 2,
  xplm_WindowDecorationSelfDecoratedResizable = 3,
} XPLMWindowDecoration;
typedef struct {
     int                       structSize;
     int                       left;
     int                       top;
     int                       right;
     int                       bottom;
     int                       visible;
     XPLMDrawWindow_f          drawWindowFunc;
     XPLMHandleMouseClick_f    handleMouseClickFunc;
     XPLMHandleKey_f           handleKeyFunc;
     XPLMHandleCursor_f        handleCursorFunc;
     XPLMHandleMouseWheel_f    handleMouseWheelFunc;
     void *                    refcon;
#if defined(XPLM301)
     XPLMWindowDecoration      decorateAsFloatingWindow;
#endif 
#if defined(XPLM300)
     XPLMWindowLayer           layer;
#endif 
#if defined(XPLM300)
     XPLMHandleMouseClick_f    handleRightClickFunc;
#endif 
} XPLMCreateWindow_t;
XPLM_API XPLMWindowID XPLMCreateWindowEx(
                         XPLMCreateWindow_t * inParams);
XPLM_API XPLMWindowID XPLMCreateWindow(
                         int                  inLeft,
                         int                  inTop,
                         int                  inRight,
                         int                  inBottom,
                         int                  inIsVisible,
                         XPLMDrawWindow_f     inDrawCallback,
                         XPLMHandleKey_f      inKeyCallback,
                         XPLMHandleMouseClick_f inMouseCallback,
                         void *               inRefcon);
XPLM_API void       XPLMDestroyWindow(
                         XPLMWindowID         inWindowID);
XPLM_API void       XPLMGetScreenSize(
                         int *                outWidth,               
                         int *                outHeight);             
XPLM_API void       XPLMGetScreenBoundsGlobal(
                         int *                outLeft,                
                         int *                outTop,                 
                         int *                outRight,               
                         int *                outBottom);             
typedef void (* XPLMReceiveMonitorBoundsGlobal_f)(
                         int                  inMonitorIndex,
                         int                  inLeftBx,
                         int                  inTopBx,
                         int                  inRightBx,
                         int                  inBottomBx,
                         void *               inRefcon);
XPLM_API void       XPLMGetAllMonitorBoundsGlobal(
                         XPLMReceiveMonitorBoundsGlobal_f inMonitorBoundsCallback,
                         void *               inRefcon);
typedef void (* XPLMReceiveMonitorBoundsOS_f)(
                         int                  inMonitorIndex,
                         int                  inLeftPx,
                         int                  inTopPx,
                         int                  inRightPx,
                         int                  inBottomPx,
                         void *               inRefcon);
XPLM_API void       XPLMGetAllMonitorBoundsOS(
                         XPLMReceiveMonitorBoundsOS_f inMonitorBoundsCallback,
                         void *               inRefcon);
XPLM_API void       XPLMGetMouseLocation(
                         int *                outX,                   
                         int *                outY);                  
XPLM_API void       XPLMGetMouseLocationGlobal(
                         int *                outX,                   
                         int *                outY);                  
XPLM_API void       XPLMGetWindowGeometry(
                         XPLMWindowID         inWindowID,
                         int *                outLeft,                
                         int *                outTop,                 
                         int *                outRight,               
                         int *                outBottom);             
XPLM_API void       XPLMSetWindowGeometry(
                         XPLMWindowID         inWindowID,
                         int                  inLeft,
                         int                  inTop,
                         int                  inRight,
                         int                  inBottom);
XPLM_API void       XPLMGetWindowGeometryOS(
                         XPLMWindowID         inWindowID,
                         int *                outLeft,                
                         int *                outTop,                 
                         int *                outRight,               
                         int *                outBottom);             
XPLM_API void       XPLMSetWindowGeometryOS(
                         XPLMWindowID         inWindowID,
                         int                  inLeft,
                         int                  inTop,
                         int                  inRight,
                         int                  inBottom);
XPLM_API void       XPLMGetWindowGeometryVR(
                         XPLMWindowID         inWindowID,
                         int *                outWidthBoxels,         
                         int *                outHeightBoxels);       
XPLM_API void       XPLMSetWindowGeometryVR(
                         XPLMWindowID         inWindowID,
                         int                  widthBoxels,
                         int                  heightBoxels);
XPLM_API int        XPLMGetWindowIsVisible(
                         XPLMWindowID         inWindowID);
XPLM_API void       XPLMSetWindowIsVisible(
                         XPLMWindowID         inWindowID,
                         int                  inIsVisible);
XPLM_API int        XPLMWindowIsPoppedOut(
                         XPLMWindowID         inWindowID);
XPLM_API int        XPLMWindowIsInVR(
                         XPLMWindowID         inWindowID);
XPLM_API void       XPLMSetWindowGravity(
                         XPLMWindowID         inWindowID,
                         float                inLeftGravity,
                         float                inTopGravity,
                         float                inRightGravity,
                         float                inBottomGravity);
XPLM_API void       XPLMSetWindowResizingLimits(
                         XPLMWindowID         inWindowID,
                         int                  inMinWidthBoxels,
                         int                  inMinHeightBoxels,
                         int                  inMaxWidthBoxels,
                         int                  inMaxHeightBoxels);
typedef enum {
  xplm_WindowPositionFree = 0,
  xplm_WindowCenterOnMonitor = 1,
  xplm_WindowFullScreenOnMonitor = 2,
  xplm_WindowFullScreenOnAllMonitors = 3,
  xplm_WindowPopOut = 4,
#if defined(XPLM301)
  xplm_WindowVR = 5,
#endif 
} XPLMWindowPositioningMode;
XPLM_API void       XPLMSetWindowPositioningMode(
                         XPLMWindowID         inWindowID,
                         XPLMWindowPositioningMode inPositioningMode,
                         int                  inMonitorIndex);
XPLM_API void       XPLMSetWindowTitle(
                         XPLMWindowID         inWindowID,
                         const char *         inWindowTitle);
XPLM_API void *     XPLMGetWindowRefCon(
                         XPLMWindowID         inWindowID);
XPLM_API void       XPLMSetWindowRefCon(
                         XPLMWindowID         inWindowID,
                         void *               inRefcon);
XPLM_API void       XPLMTakeKeyboardFocus(
                         XPLMWindowID         inWindow);
XPLM_API int        XPLMHasKeyboardFocus(
                         XPLMWindowID         inWindow);
XPLM_API void       XPLMBringWindowToFront(
                         XPLMWindowID         inWindow);
XPLM_API int        XPLMIsWindowInFront(
                         XPLMWindowID         inWindow);
typedef int (* XPLMKeySniffer_f)(
                         char                 inChar,
                         XPLMKeyFlags         inFlags,
                         char                 inVirtualKey,
                         void *               inRefcon);
XPLM_API int        XPLMRegisterKeySniffer(
                         XPLMKeySniffer_f     inCallback,
                         int                  inBeforeWindows,
                         void *               inRefcon);
XPLM_API int        XPLMUnregisterKeySniffer(
                         XPLMKeySniffer_f     inCallback,
                         int                  inBeforeWindows,
                         void *               inRefcon);
typedef void (* XPLMHotKey_f)(
                         void *               inRefcon);
typedef void * XPLMHotKeyID;
XPLM_API XPLMHotKeyID XPLMRegisterHotKey(
                         char                 inVirtualKey,
                         XPLMKeyFlags         inFlags,
                         const char *         inDescription,
                         XPLMHotKey_f         inCallback,
                         void *               inRefcon);
XPLM_API void       XPLMUnregisterHotKey(
                         XPLMHotKeyID         inHotKey);
XPLM_API int        XPLMCountHotKeys(void);
XPLM_API XPLMHotKeyID XPLMGetNthHotKey(
                         int                  inIndex);
XPLM_API void       XPLMGetHotKeyInfo(
                         XPLMHotKeyID         inHotKey,
                         char *               outVirtualKey,          
                         XPLMKeyFlags *       outFlags,               
                         char *               outDescription,         
                         XPLMPluginID *       outPlugin);             
XPLM_API void       XPLMSetHotKeyCombination(
                         XPLMHotKeyID         inHotKey,
                         char                 inVirtualKey,
                         XPLMKeyFlags         inFlags);