src/raw/xplm.zig


pub const AvionicsDeviceID = enum(c_int) {
    gns430_pilot = 0,
    gns430_copilot = 1,
    gns530_pilot = 2,
    gns530_copilot = 3,
    cdu739_pilot = 4,
    cdu739_copilot = 5,
    g1000_pfd_pilot = 6,
    g1000_mfd = 7,
    g1000_pfd_copilot = 8,
    cdu815_pilot = 9,
    cdu815_copilot = 10,
    primus_pfd_pilot = 11,
    primus_pfd_copilot = 12,
    primus_mfd_pilot = 13,
    primus_mfd_copilot = 14,
    primus_mfd_center = 15,
    primus_rmu_pilot = 16,
    primus_rmu_copilot = 17,
    _,
};
pub const XPLMAvionicsCallback_f = ?*const fn (AvionicsDeviceID, c_int, ?*anyopaque) callconv(.C) c_int;
pub const XPLMAvionicsID = ?*anyopaque;
pub const XPLMCustomizeAvionics_t = extern struct {
    structSize: c_int = std.mem.zeroes(c_int),
    deviceId: AvionicsDeviceID = std.mem.zeroes(AvionicsDeviceID),
    drawCallbackBefore: XPLMAvionicsCallback_f = std.mem.zeroes(XPLMAvionicsCallback_f),
    drawCallbackAfter: XPLMAvionicsCallback_f = std.mem.zeroes(XPLMAvionicsCallback_f),
    refcon: ?*anyopaque = std.mem.zeroes(?*anyopaque),
};
pub extern fn XPLMRegisterAvionicsCallbacksEx(inParams: [*c]XPLMCustomizeAvionics_t) XPLMAvionicsID;
pub extern fn XPLMUnregisterAvionicsCallbacks(inAvionicsId: XPLMAvionicsID) void;
pub const WindowID = ?*anyopaque;
pub const XPLMDrawWindow_f = ?*const fn (WindowID, ?*anyopaque) callconv(.C) void;
pub const XPLMHandleKey_f = ?*const fn (WindowID, u8, KeyFlags, u8, ?*anyopaque, c_int) callconv(.C) void;
pub const MouseStatus = enum(c_int) {
    down = 1,
    drag = 2,
    up = 3,
    _,
};
pub const XPLMHandleMouseClick_f = ?*const fn (WindowID, c_int, c_int, MouseStatus, ?*anyopaque) callconv(.C) c_int;
pub const CursorStatus = enum(c_int) {
    default = 0,
    hidden = 1,
    arrow = 2,
    custom = 3,
    _,
};
pub const XPLMHandleCursor_f = ?*const fn (WindowID, c_int, c_int, ?*anyopaque) callconv(.C) CursorStatus;
pub const XPLMHandleMouseWheel_f = ?*const fn (WindowID, c_int, c_int, c_int, c_int, ?*anyopaque) callconv(.C) c_int;
pub const WindowLayer = enum(c_int) {
    flight_overlay = 0,
    floating_windows = 1,
    modal = 2,
    growl_notifications = 3,
    _,
};
pub const WindowDecoration = enum(c_int) {
    none = 0,
    round_rectangle = 1,
    self_decorated = 2,
    self_decorated_resizable = 3,
    _,
};
pub const XPLMCreateWindow_t = extern struct {
    structSize: c_int = std.mem.zeroes(c_int),
    left: c_int = std.mem.zeroes(c_int),
    top: c_int = std.mem.zeroes(c_int),
    right: c_int = std.mem.zeroes(c_int),
    bottom: c_int = std.mem.zeroes(c_int),
    visible: c_int = std.mem.zeroes(c_int),
    drawWindowFunc: XPLMDrawWindow_f = std.mem.zeroes(XPLMDrawWindow_f),
    handleMouseClickFunc: XPLMHandleMouseClick_f = std.mem.zeroes(XPLMHandleMouseClick_f),
    handleKeyFunc: XPLMHandleKey_f = std.mem.zeroes(XPLMHandleKey_f),
    handleCursorFunc: XPLMHandleCursor_f = std.mem.zeroes(XPLMHandleCursor_f),
    handleMouseWheelFunc: XPLMHandleMouseWheel_f = std.mem.zeroes(XPLMHandleMouseWheel_f),
    refcon: ?*anyopaque = std.mem.zeroes(?*anyopaque),
    decorateAsFloatingWindow: WindowDecoration = std.mem.zeroes(WindowDecoration),
    layer: WindowLayer = std.mem.zeroes(WindowLayer),
    handleRightClickFunc: XPLMHandleMouseClick_f = std.mem.zeroes(XPLMHandleMouseClick_f),
};
pub extern fn XPLMCreateWindowEx(inParams: [*c]XPLMCreateWindow_t) WindowID;
pub extern fn XPLMCreateWindow(inLeft: c_int, inTop: c_int, inRight: c_int, inBottom: c_int, inIsVisible: c_int, inDrawCallback: XPLMDrawWindow_f, inKeyCallback: XPLMHandleKey_f, inMouseCallback: XPLMHandleMouseClick_f, inRefcon: ?*anyopaque) WindowID;
pub extern fn XPLMDestroyWindow(inWindowID: WindowID) void;
pub extern fn XPLMGetScreenSize(outWidth: [*c]c_int, outHeight: [*c]c_int) void;
pub extern fn XPLMGetScreenBoundsGlobal(outLeft: [*c]c_int, outTop: [*c]c_int, outRight: [*c]c_int, outBottom: [*c]c_int) void;
pub const XPLMReceiveMonitorBoundsGlobal_f = ?*const fn (c_int, c_int, c_int, c_int, c_int, ?*anyopaque) callconv(.C) void;
pub extern fn XPLMGetAllMonitorBoundsGlobal(inMonitorBoundsCallback: XPLMReceiveMonitorBoundsGlobal_f, inRefcon: ?*anyopaque) void;
pub const XPLMReceiveMonitorBoundsOS_f = ?*const fn (c_int, c_int, c_int, c_int, c_int, ?*anyopaque) callconv(.C) void;
pub extern fn XPLMGetAllMonitorBoundsOS(inMonitorBoundsCallback: XPLMReceiveMonitorBoundsOS_f, inRefcon: ?*anyopaque) void;
pub extern fn XPLMGetMouseLocation(outX: [*c]c_int, outY: [*c]c_int) void;
pub extern fn XPLMGetMouseLocationGlobal(outX: [*c]c_int, outY: [*c]c_int) void;
pub extern fn XPLMGetWindowGeometry(inWindowID: WindowID, outLeft: [*c]c_int, outTop: [*c]c_int, outRight: [*c]c_int, outBottom: [*c]c_int) void;
pub extern fn XPLMSetWindowGeometry(inWindowID: WindowID, inLeft: c_int, inTop: c_int, inRight: c_int, inBottom: c_int) void;
pub extern fn XPLMGetWindowGeometryOS(inWindowID: WindowID, outLeft: [*c]c_int, outTop: [*c]c_int, outRight: [*c]c_int, outBottom: [*c]c_int) void;
pub extern fn XPLMSetWindowGeometryOS(inWindowID: WindowID, inLeft: c_int, inTop: c_int, inRight: c_int, inBottom: c_int) void;
pub extern fn XPLMGetWindowGeometryVR(inWindowID: WindowID, outWidthBoxels: [*c]c_int, outHeightBoxels: [*c]c_int) void;
pub extern fn XPLMSetWindowGeometryVR(inWindowID: WindowID, widthBoxels: c_int, heightBoxels: c_int) void;
pub extern fn XPLMGetWindowIsVisible(inWindowID: WindowID) c_int;
pub extern fn XPLMSetWindowIsVisible(inWindowID: WindowID, inIsVisible: c_int) void;
pub extern fn XPLMWindowIsPoppedOut(inWindowID: WindowID) c_int;
pub extern fn XPLMWindowIsInVR(inWindowID: WindowID) c_int;
pub extern fn XPLMSetWindowGravity(inWindowID: WindowID, inLeftGravity: f32, inTopGravity: f32, inRightGravity: f32, inBottomGravity: f32) void;
pub extern fn XPLMSetWindowResizingLimits(inWindowID: WindowID, inMinWidthBoxels: c_int, inMinHeightBoxels: c_int, inMaxWidthBoxels: c_int, inMaxHeightBoxels: c_int) void;
pub const XPLMWindowPositioningMode = enum(c_int) {
    position_free = 0,
    center_on_monitor = 1,
    full_screen_on_monitor = 2,
    full_screen_on_all_monitors = 3,
    pop_out = 4,
    vr = 5,
    _,
};
pub extern fn XPLMSetWindowPositioningMode(inWindowID: WindowID, inPositioningMode: XPLMWindowPositioningMode, inMonitorIndex: c_int) void;
pub extern fn XPLMSetWindowTitle(inWindowID: WindowID, inWindowTitle: [*c]const u8) void;
pub extern fn XPLMGetWindowRefCon(inWindowID: WindowID) ?*anyopaque;
pub extern fn XPLMSetWindowRefCon(inWindowID: WindowID, inRefcon: ?*anyopaque) void;
pub extern fn XPLMTakeKeyboardFocus(inWindow: WindowID) void;
pub extern fn XPLMHasKeyboardFocus(inWindow: WindowID) c_int;
pub extern fn XPLMBringWindowToFront(inWindow: WindowID) void;
pub extern fn XPLMIsWindowInFront(inWindow: WindowID) c_int;
pub const KeySnifferCallback = ?*const fn (u8, KeyFlags, u8, ?*anyopaque) callconv(.C) c_int;
pub extern fn XPLMRegisterKeySniffer(inCallback: KeySnifferCallback, inBeforeWindows: c_int, inRefcon: ?*anyopaque) c_int;
pub extern fn XPLMUnregisterKeySniffer(inCallback: KeySnifferCallback, inBeforeWindows: c_int, inRefcon: ?*anyopaque) c_int;
pub const HotKeyCallback = ?*const fn (?*anyopaque) callconv(.C) void;
pub const XPLMHotKeyID = ?*anyopaque;
pub extern fn XPLMRegisterHotKey(inVirtualKey: u8, inFlags: KeyFlags, inDescription: [*c]const u8, inCallback: HotKeyCallback, inRefcon: ?*anyopaque) XPLMHotKeyID;
pub extern fn XPLMUnregisterHotKey(inHotKey: XPLMHotKeyID) void;
pub extern fn XPLMCountHotKeys() c_int;
pub extern fn XPLMGetNthHotKey(inIndex: c_int) XPLMHotKeyID;
pub extern fn XPLMGetHotKeyInfo(inHotKey: XPLMHotKeyID, outVirtualKey: [*c]u8, outFlags: [*c]KeyFlags, outDescription: [*c]u8, outPlugin: [*c]PluginID) void;
pub extern fn XPLMSetHotKeyCombination(inHotKey: XPLMHotKeyID, inVirtualKey: u8, inFlags: KeyFlags) void;
pub const TextureID = enum(c_int) {
    general_interface = 0,
    _,
};
pub extern fn XPLMSetGraphicsState(inEnableFog: c_int, inNumberTexUnits: c_int, inEnableLighting: c_int, inEnableAlphaTesting: c_int, inEnableAlphaBlending: c_int, inEnableDepthTesting: c_int, inEnableDepthWriting: c_int) void;
pub extern fn XPLMBindTexture2d(inTextureNum: c_int, inTextureUnit: c_int) void;
pub extern fn XPLMGenerateTextureNumbers(outTextureIDs: [*c]c_int, inCount: c_int) void;
pub extern fn XPLMWorldToLocal(inLatitude: f64, inLongitude: f64, inAltitude: f64, outX: [*c]f64, outY: [*c]f64, outZ: [*c]f64) void;
pub extern fn XPLMLocalToWorld(inX: f64, inY: f64, inZ: f64, outLatitude: [*c]f64, outLongitude: [*c]f64, outAltitude: [*c]f64) void;
pub extern fn XPLMDrawTranslucentDarkBox(inLeft: c_int, inTop: c_int, inRight: c_int, inBottom: c_int) void;
pub const FontID = enum(c_int) {
    basic = 0,
    proportional = 18,
    _,
};
pub extern fn XPLMDrawString(inColorRGB: [*c]f32, inXOffset: c_int, inYOffset: c_int, inChar: [*c]u8, inWordWrapWidth: [*c]c_int, inFontID: FontID) void;
pub extern fn XPLMDrawNumber(inColorRGB: [*c]f32, inXOffset: c_int, inYOffset: c_int, inValue: f64, inDigits: c_int, inDecimals: c_int, inShowSign: c_int, inFontID: FontID) void;
pub extern fn XPLMGetFontDimensions(inFontID: FontID, outCharWidth: [*c]c_int, outCharHeight: [*c]c_int, outDigitsOnly: [*c]c_int) void;
pub extern fn XPLMMeasureString(inFontID: FontID, inChar: [*c]const u8, inNumChars: c_int) f32;
pub const SceneryProbeType = enum(c_int) {
    y = 0,
    _,
};
pub const ProbeResult = enum(c_int) {
    hit_terrain = 0,
    err = 1,
    missed = 2,
    _,
};
pub const SceneryProbeHandle = ?*anyopaque;
pub const XPLMProbeInfo_t = extern struct {
    structSize: c_int = std.mem.zeroes(c_int),
    locationX: f32 = std.mem.zeroes(f32),
    locationY: f32 = std.mem.zeroes(f32),
    locationZ: f32 = std.mem.zeroes(f32),
    normalX: f32 = std.mem.zeroes(f32),
    normalY: f32 = std.mem.zeroes(f32),
    normalZ: f32 = std.mem.zeroes(f32),
    velocityX: f32 = std.mem.zeroes(f32),
    velocityY: f32 = std.mem.zeroes(f32),
    velocityZ: f32 = std.mem.zeroes(f32),
    is_wet: c_int = std.mem.zeroes(c_int),
};
pub extern fn XPLMCreateProbe(inProbeType: SceneryProbeType) SceneryProbeHandle;
pub extern fn XPLMDestroyProbe(inProbe: SceneryProbeHandle) void;
pub extern fn XPLMProbeTerrainXYZ(inProbe: SceneryProbeHandle, inX: f32, inY: f32, inZ: f32, outInfo: [*c]XPLMProbeInfo_t) ProbeResult;
pub extern fn XPLMGetMagneticVariation(latitude: f64, longitude: f64) f32;
pub extern fn XPLMDegTrueToDegMagnetic(headingDegreesTrue: f32) f32;
pub extern fn XPLMDegMagneticToDegTrue(headingDegreesMagnetic: f32) f32;
pub const SceneryObjectHandle = ?*anyopaque;
pub const DrawInfo = extern struct {
    structSize: c_int = std.mem.zeroes(c_int),
    x: f32 = std.mem.zeroes(f32),
    y: f32 = std.mem.zeroes(f32),
    z: f32 = std.mem.zeroes(f32),
    pitch: f32 = std.mem.zeroes(f32),
    heading: f32 = std.mem.zeroes(f32),
    roll: f32 = std.mem.zeroes(f32),
};
pub const ObjectLoadedCallback = ?*const fn (SceneryObjectHandle, ?*anyopaque) callconv(.C) void;
pub extern fn XPLMLoadObject(inPath: [*c]const u8) SceneryObjectHandle;
pub extern fn XPLMLoadObjectAsync(inPath: [*c]const u8, inCallback: ObjectLoadedCallback, inRefcon: ?*anyopaque) void;
pub extern fn XPLMUnloadObject(inObject: SceneryObjectHandle) void;
pub const XPLMLibraryEnumerator_f = ?*const fn ([*c]const u8, ?*anyopaque) callconv(.C) void;
pub extern fn XPLMLookupObjects(inPath: [*c]const u8, inLatitude: f32, inLongitude: f32, enumerator: XPLMLibraryEnumerator_f, ref: ?*anyopaque) c_int;
pub const ObjectInstanceHandle = ?*anyopaque;
pub extern fn XPLMCreateInstance(obj: SceneryObjectHandle, datarefs: [*c][*c]const u8) ObjectInstanceHandle;
pub extern fn XPLMDestroyInstance(instance: ObjectInstanceHandle) void;
pub extern fn XPLMInstanceSetPosition(instance: ObjectInstanceHandle, new_position: [*c]const DrawInfo, data: [*c]const f32) void;
